--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /Zadacha1Var6/Debug
+/Zadacha1Var6/.vs/Zadacha1Var6/v14
+/Zadacha1Var6/Zadacha1Var6/Debug
+/Zadacha1Var6/Zadacha1Var6.VC.VC.opendb
+/Zadacha1Var6/Zadacha1Var6.VC.db
