--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /CarStat/Debug/car.~xt
 /CarStat/Debug/wwwcar.txt
 /CarStat/Debug/ddcar.txt
+/CarStat/CarStat/car.1txt
+/CarStat/Debug/car.txt
+/CarStat/CarStat/car.txt
